
TODO
    Must have all versions in sync.
    Add the info section to the docs.

3.19_03 Fri Nov 25 22:20:51 CST 2005
    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been restored, but defaults
      to true instead of false.


3.19_02 Thu Nov 24 22:51:40 CST 2005

    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been removed.
    * Non-closing HTML tags like <IMG> are now rendered as <IMG />.
    * All values in tags are now double-quoted.  Previously, all-numeric
      values weren't quoted.

    [FIXES]
    * The DOCTYPE declaration now always gets put back at the top of
      the recreated document.  Thanks, Terrence Brannon.
    * Non-closing HTML tags like <IMG> are now rendered as <IMG />.
      Thanks to Ian Malpass.
    * All values in tags are now double-quoted.

    [DOCUMENTATION]
    * Updated docs from Terrence Brannon.


2005-11-09   Andy Lester

   Release 3.19_01 -- No new functionality.  New tests, though!
   Thanks to the Chicago Perl Mongers for their work.

2003-09-15   Sean M. Burke <sburke@cpan.org>

   Release 3.18 -- bugfix to test, adding qr// to look_(down|up)

   Accepting Iain 'Spoon' Truskett's neat patch for qr// as lookdown
   operators (previously you had to do sub { $_[0]=~ m/.../}).

   Rewrote some tests, notably parsefile.t, which was pointlessly
   failing because of an incompatibility with an HTML::Parser version.

   Removed the disused ancient utils "dtd2pm" and "ent" from the dist.

   Added TODO file.


2003-01-18   Sean M. Burke <sburke@cpan.org>

   Release 3.17 -- minor bugfix

   HTML::Element : Making as_HTML('',...) work just like
   as_HTML(undef,...).  Also fixing as_XML's docs to remove mention of
   an unimplemented feature (specifying what characters to escape).


2002-11-06   Sean M. Burke <sburke@cpan.org>

   Release 3.16 -- just fixing a doc typo.


2002-11-06   Sean M. Burke <sburke@cpan.org>

   Release 3.15 -- a few new features.
